[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "macs_io_python"
version = "0.0.1"
description="Python Bindings for MACS Image Format"
readme = "README.md"
authors = [
  { name = "My Name", email = "me@email.com" },
]
requires-python = ">=3.7"


